--- a/common/newnames.tex
+++ b/common/newnames.tex
@@ -47,3 +47,31 @@
 
 % для списка литературы в диссертации и списка чужих работ в автореферате:
 \newcommand{\bibtitlefull}{Список литературы} % (ГОСТ Р 7.0.11-2011, 4)
+
+\newcommand{\perm}{P}
+\newcommand{\LL}{L}
+\newcommand{\invA}{B}
+\newcommand{\cri}{Q}
+\newcommand{\stiff}{L}
+\newcommand{\mass}{A_M}
+\newcommand{\KK}{K}
+\newcommand{\KKother}{\widetilde{K}}
+\newcommand{\MM}{M}
+\newcommand{\MMother}{\widetilde{M}}
+\newcommand{\bbeta}{\beta'}
+\newcommand{\ww}{z'}
+\newcommand{\lap}{A_S}
+\newcommand{\qq}{\widetilde{q}}
+\newcommand{\base}{2}
+\newcommand{\Binf}{B^{(\infty)}}
+\newcommand{\Ainf}{A^{(\infty)}}
+\newcommand{\stiffnessQ}{R}
+\DeclareMathOperator{\rank}{rank}
+
+\newtheorem{lemma}{Лемма}[section]
+\newtheorem{proposition}{Утверждение}[section]
+\newtheorem{theorem}{Теорема}[section]
+\newtheorem{corollary}{Следствие}[section]
+\newtheorem{example}{Пример}[section]
+\newtheorem{definition}{Определение}[section]
+\newtheorem{remark}{Замечание}[section]
